# api/openapi/discount.yaml
@@ -6,38 +6,34 @@ info:
   contact:
     name: Dmitry Makarenko
 servers:
-  - url: https://{hostname}/api
+  - url: http://{hostname}/api
     variables:
       hostname:
         default: localhost
 security:
   - bearerAuth: [ ]
 paths:
-  /brand/{brandID}/codes/generate:
+  /brand/{brandID}/code/generate:
     post:
-      operationId: generateCodes
+      operationId: generateCode
       parameters:
         - in: path
           name: brandID
+          example: my_super_popular_brand
           schema:
             type: string
           required: true
           description: ID of the brand
-        - in: query
-          name: amount
-          schema:
-            type: integer
-            minimum: 1
-            maximum: 200
-            default: 1
-          description: The number of codes to generate
+      requestBody:
+        description: Parameters of generated code
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/GenerateDiscountCode'
       responses:
-        '200':
-          description: Genereted discount codes
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GeneratedDiscountCodes'
+        '204':
+          description: Succesfully generate discount code
         default:
           description: unexpected error
           content:
@@ -45,19 +41,20 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /brand/{brandID}/codes/fetch:
-    get:
+  /brand/{brandID}/code/fetch:
+    post:
       operationId: fetchCode
       parameters:
         - in: path
           name: brandID
+          example: my_super_popular_brand
           schema:
             type: string
           required: true
           description: ID of the brand
       responses:
         '200':
-          description: todo
+          description: Successfuly fetch code
           content:
             application/json:
               schema:
@@ -81,16 +78,20 @@ components:
       properties:
         code:
           type: string
+          example: "123e4567-e89b-12d3-a456-426614174000"
         brand:
           type: string
-    GeneratedDiscountCodes:
+          example: my_super_popular_brand
+    GenerateDiscountCode:
       type: object
-      required: [ brand, amount ]
+      required: [ amount ]
       properties:
         amount:
           type: integer
-        brand:
-          type: string
+          minimum: 1
+          maximum: 200
+          default: 1
+          description: The number of codes to generate
     Error:
       type: object
       required:
