# internal/discount/ports/openapi_api.gen.go
@@ -1,0 +1,134 @@
+// Package ports provides primitives to interact with the openapi HTTP API.
+//
+// Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
+package ports
+
+import (
+	"context"
+	"fmt"
+	"net/http"
+
+	"github.com/deepmap/oapi-codegen/pkg/runtime"
+	"github.com/go-chi/chi/v5"
+)
+
+// ServerInterface represents all server handlers.
+type ServerInterface interface {
+
+	// (POST /brand/{brandID}/code/fetch)
+	FetchCode(w http.ResponseWriter, r *http.Request, brandID string)
+
+	// (POST /brand/{brandID}/code/generate)
+	GenerateCode(w http.ResponseWriter, r *http.Request, brandID string)
+}
+
+// ServerInterfaceWrapper converts contexts to parameters.
+type ServerInterfaceWrapper struct {
+	Handler            ServerInterface
+	HandlerMiddlewares []MiddlewareFunc
+}
+
+type MiddlewareFunc func(http.HandlerFunc) http.HandlerFunc
+
+// FetchCode operation middleware
+func (siw *ServerInterfaceWrapper) FetchCode(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	// ------------- Path parameter "brandID" -------------
+	var brandID string
+
+	err = runtime.BindStyledParameter("simple", false, "brandID", chi.URLParam(r, "brandID"), &brandID)
+	if err != nil {
+		http.Error(w, fmt.Sprintf("Invalid format for parameter brandID: %s", err), http.StatusBadRequest)
+		return
+	}
+
+	ctx = context.WithValue(ctx, BearerAuthScopes, []string{""})
+
+	var handler = func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.FetchCode(w, r, brandID)
+	}
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler(w, r.WithContext(ctx))
+}
+
+// GenerateCode operation middleware
+func (siw *ServerInterfaceWrapper) GenerateCode(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	// ------------- Path parameter "brandID" -------------
+	var brandID string
+
+	err = runtime.BindStyledParameter("simple", false, "brandID", chi.URLParam(r, "brandID"), &brandID)
+	if err != nil {
+		http.Error(w, fmt.Sprintf("Invalid format for parameter brandID: %s", err), http.StatusBadRequest)
+		return
+	}
+
+	ctx = context.WithValue(ctx, BearerAuthScopes, []string{""})
+
+	var handler = func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GenerateCode(w, r, brandID)
+	}
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler(w, r.WithContext(ctx))
+}
+
+// Handler creates http.Handler with routing matching OpenAPI spec.
+func Handler(si ServerInterface) http.Handler {
+	return HandlerWithOptions(si, ChiServerOptions{})
+}
+
+type ChiServerOptions struct {
+	BaseURL     string
+	BaseRouter  chi.Router
+	Middlewares []MiddlewareFunc
+}
+
+// HandlerFromMux creates http.Handler with routing matching OpenAPI spec based on the provided mux.
+func HandlerFromMux(si ServerInterface, r chi.Router) http.Handler {
+	return HandlerWithOptions(si, ChiServerOptions{
+		BaseRouter: r,
+	})
+}
+
+func HandlerFromMuxWithBaseURL(si ServerInterface, r chi.Router, baseURL string) http.Handler {
+	return HandlerWithOptions(si, ChiServerOptions{
+		BaseURL:    baseURL,
+		BaseRouter: r,
+	})
+}
+
+// HandlerWithOptions creates http.Handler with additional options
+func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handler {
+	r := options.BaseRouter
+
+	if r == nil {
+		r = chi.NewRouter()
+	}
+	wrapper := ServerInterfaceWrapper{
+		Handler:            si,
+		HandlerMiddlewares: options.Middlewares,
+	}
+
+	r.Group(func(r chi.Router) {
+		r.Post(options.BaseURL+"/brand/{brandID}/code/fetch", wrapper.FetchCode)
+	})
+	r.Group(func(r chi.Router) {
+		r.Post(options.BaseURL+"/brand/{brandID}/code/generate", wrapper.GenerateCode)
+	})
+
+	return r
+}
